--- a/src/index.scss
+++ b/src/index.scss
@@ -15,7 +15,7 @@ body {
   margin: 0;
   font-family: 'Open Sans', sans-serif;
 -osx-font-smoothing: grayscale;
-background: $mainGreen;
+background: $mainWhite;
 // color: $mainBlack;
 }
 
